fix: fix scrollbar

--- a/src/modules/booking/components/bookings-list/bookings-list.module.scss
+++ b/src/modules/booking/components/bookings-list/bookings-list.module.scss
@@ -8,6 +8,7 @@
   row-gap: utils.spacing(5);
   padding-right: utils.spacing(5);
   padding-left: utils.spacing(5);
+  padding-bottom: 1rem;
 
   @include mixins.phone {
     padding-right: utils.spacing(3);
