--- a/src/modules/booking/containers/booking-time-select/booking-time-select.module.scss
+++ b/src/modules/booking/containers/booking-time-select/booking-time-select.module.scss
@@ -106,7 +106,7 @@
 .swiperSlideCalendar {
   z-index: 3;
   width: 54px !important;
-  height: 78px !important;
+  height: 74px !important;
 }
 
 .navigationBtns {
