--- a/src/modules/booking/containers/my-bookings-content/my-bookings-content.module.scss
+++ b/src/modules/booking/containers/my-bookings-content/my-bookings-content.module.scss
@@ -9,6 +9,6 @@
 
   @include mixins.phone {
     padding-top: utils.spacing(3);
-    padding-bottom: 60px;
+    padding-bottom: 4.75rem;
   }
 }
